правки по код ревью

--- a/source/less/blocks/catalog/product-last.less
+++ b/source/less/blocks/catalog/product-last.less
@@ -1,10 +1,8 @@
-.product-last {
-  &__title {
-    font-family: "Oswald", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 400;
-    color: #111111;
-    text-transform: uppercase;
-  }
+.product-last__title {
+  font-family: @oswald;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #111111;
+  text-transform: uppercase;
 }
