--- a/source/less/blocks/catalog/product.less
+++ b/source/less/blocks/catalog/product.less
@@ -1,14 +1,12 @@
-.product {
-  &__link {
-    text-decoration: none;
-  }
+.product__link {
+  text-decoration: none;
+}
 
-  &__link-title {
-    font-family: "Oswald", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 400;
-    color: #222222;
-    text-transform: uppercase;
-  }
+.product__link-title {
+  font-family: @oswald;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: @dark-grey3;
+  text-transform: uppercase;
 }
