--- a/source/less/blocks/form/form-list.less
+++ b/source/less/blocks/form/form-list.less
@@ -1,29 +1,29 @@
 .form-list {
-  font-family: "Oswald", sans-serif;
+  font-family: @oswald;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
   text-transform: uppercase;
+}
 
-  &__item-label,
-  &__item-input {
-    color: #444444;
-  }
+.form-list__item-label,
+.form-list__item-input {
+  color: @dark-grey;
+}
 
-  &__item-radio-label {
-    color: #222222;
-  }
+.form-list__item-radio-label {
+  color: @dark-grey3;
+}
 
-  &__item-checkbox-label {
-    color: #000000;
-  }
+.form-list__item-checkbox-label {
+  color: @black;
+}
 
-  &__item-input {
-    border: 1px solid #e7e7e7;
-  }
+.form-list__item-input {
+  border: 1px solid #e7e7e7;
+}
 
-  &__item-input--dark {
-    border: 1px solid #cdcdcd;
-    text-transform: uppercase;
-  }
+.form-list__item-input--dark {
+  border: 1px solid @grey;
+  text-transform: uppercase;
 }
