--- a/source/less/blocks/form/program-selection-button.less
+++ b/source/less/blocks/form/program-selection-button.less
@@ -1,5 +1,5 @@
 .program-selection-button {
-  color: #ffffff;
-  background-color: #68b738;
+  color: @white;
+  background-color: @green;
   border: none;
 }
