--- a/source/less/blocks/index/advantages.less
+++ b/source/less/blocks/index/advantages.less
@@ -1,6 +1,6 @@
 .advantages {
   &__title {
-    font-family: "Oswald", sans-serif;
+    font-family: @oswald;
     font-size: 36px;
     line-height: 40px;
     font-weight: 400;
@@ -11,10 +11,10 @@
   }
 
   &__list-text {
-    font-family: "Lato", sans-serif;
+    font-family: @lato;
     font-size: 14px;
     line-height: 18px;
     font-weight: 400;
-    color: #444444;
+    color: @dark-grey;
   }
 }
