--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -1,27 +1,27 @@
 .hero {
   background-image: url("../img/promo-filter-image.png");
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
+}
 
-  &__title {
-    font-family: "Oswald", sans-serif;
-    font-size: 36px;
-    line-height: 36px;
-    font-weight: 400;
-    color: #ffffff;
-  }
+.hero__title {
+  font-family: @oswald;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 400;
+  color: @white;
+}
 
-  &__description {
-    font-family: "Oswald", sans-serif;
-    font-size: 14px;
-    line-height: 14px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: #ffffff;
-    background-color: #68b738;
-  }
+.hero__description {
+  font-family: @oswald;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: @white;
+  background-color: @green;
+}
 
-  &__button {
-    color: #ffffff;
-    background-color: #68b738;
-  }
+.hero__button {
+  color: @white;
+  background-color: @green;
 }
