--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,6 +1,4 @@
-.main-header {
-  &__logo {
-    margin-left: 20px;
-    margin-top: 10px;
-  }
+.main-header__logo {
+  margin-left: 20px;
+  margin-top: 10px;
 }
