--- a/source/less/style.less
+++ b/source/less/style.less
@@ -30,3 +30,5 @@
 @import "./blocks/catalog/product-button-last.less";
 @import "./blocks/catalog/additional-goods.less";
 @import "./blocks/catalog/gift.less";
+@import "./blocks/variables.less";
+@import "./blocks/social-list.less";
