--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,6 +1,6 @@
 .button {
   text-transform: uppercase;
   text-decoration: none;
-  font-family: "Oswald", sans-serif;
+  font-family: @oswald;
   font-weight: 400;
 }
