--- a/source/less/blocks/catalog/additional-goods.less
+++ b/source/less/blocks/catalog/additional-goods.less
@@ -1,31 +1,29 @@
-.additional-goods {
-  &__title {
-    font-family: "Oswald", sans-serif;
-    font-size: 24px;
-    line-height: 24px;
-    font-weight: 400;
-    color: #000000;
-  }
+.additional-goods__title {
+  font-family: @oswald;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  color: @black;
+}
 
-  &__list-item-title {
-    font-family: "Oswald", sans-serif;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: #222222;
-  }
+.additional-goods__list-item-title {
+  font-family: @oswald;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: @dark-grey3;
+}
 
-  &__list-item-text {
-    font-family: "Lato", sans-serif;
-    font-size: 14px;
-    line-height: 14px;
-    font-weight: 400;
-    color: #444444;
-  }
+.additional-goods__list-item-text {
+  font-family: @lato;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 400;
+  color: @dark-grey;
+}
 
-  &__button {
-    color: #ffffff;
-    background-color: #68b738;
-  }
+.additional-goods__button {
+  color: @white;
+  background-color: @green;
 }
