--- a/source/less/blocks/catalog/catalog-title.less
+++ b/source/less/blocks/catalog/catalog-title.less
@@ -1,7 +1,7 @@
 .catalog-title {
-  font-family: "Oswald", sans-serif;
+  font-family: @oswald;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
-  color: #000000;
+  color: @black;
 }
