--- a/source/less/blocks/catalog/product-button-last.less
+++ b/source/less/blocks/catalog/product-button-last.less
@@ -1,6 +1,6 @@
 .product-button-last {
-  color: #444444;
-  background-color: #f2f2f2;
+  color: @dark-grey;
+  background-color: @basic-grey;
   font-size: 16px;
   line-height: 20px;
 }
