--- a/source/less/blocks/catalog/product-button.less
+++ b/source/less/blocks/catalog/product-button.less
@@ -1,6 +1,6 @@
 .product-button {
-  color: #ffffff;
-  background-color: #68b738;
+  color: @white;
+  background-color: @green;
   font-size: 16px;
   line-height: 20px;
 }
