--- a/source/less/blocks/catalog/product-text.less
+++ b/source/less/blocks/catalog/product-text.less
@@ -1,9 +1,7 @@
-.product-text {
-  &__item {
-    font-family: "Lato", sans-serif;
-    font-size: 12px;
-    line-height: 16px;
-    font-weight: 400;
-    color: #444444;
-  }
+.product-text__item {
+  font-family: @lato;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 400;
+  color: @dark-grey;
 }
