--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,16 +1,14 @@
-.contacts {
-  &__title {
-    font-family: "Oswald", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
-    font-weight: 400;
-  }
+.contacts__title {
+  font-family: @oswald;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
 
-  &__description {
-    font-family: "Lato", sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-  }
+.contacts__description {
+  font-family: @lato;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
 }
