--- a/source/less/blocks/fonts.less
+++ b/source/less/blocks/fonts.less
@@ -7,6 +7,14 @@
 }
 
 @font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("../fonts/lato/Lato-Regular.woff") format("woff");
+}
+
+@font-face {
   font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
@@ -17,7 +25,23 @@
 @font-face {
   font-family: "Oswald";
   font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("../fonts/oswald/oswaldregular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
   font-weight: 500;
   font-display: swap;
   src: url("../fonts/oswald/oswaldmedium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url("../fonts/oswald/oswaldmedium.woff") format("woff");
 }
