--- a/source/less/blocks/form/form-textarea.less
+++ b/source/less/blocks/form/form-textarea.less
@@ -1,9 +1,9 @@
 .form-textarea {
-  font-family: "Oswald", sans-serif;
+  font-family: @oswald;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
   text-transform: uppercase;
-  color: #444444;
+  color: @dark-grey;
   border: 1px solid #e7e7e7;
 }
