--- a/source/less/blocks/form/form-title-description.less
+++ b/source/less/blocks/form/form-title-description.less
@@ -1,8 +1,8 @@
 .form-title-description {
-  font-family: "Oswald", sans-serif;
+  font-family: @oswald;
   font-size: 14px;
   line-height: 18px;
-  color: #000000;
+  color: @black;
   font-weight: 400;
   text-transform: uppercase;
 }
