--- a/source/less/blocks/form/form-title.less
+++ b/source/less/blocks/form/form-title.less
@@ -1,7 +1,7 @@
 .form-title {
-  font-family: "Oswald", sans-serif;
+  font-family: @oswald;
   font-size: 36px;
   line-height: 36px;
-  color: #000000;
+  color: @black;
   font-weight: 400;
 }
