--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -1,9 +1,7 @@
-.form {
-  &__wrapper-title {
-    font-family: "Oswald", sans-serif;
-    font-size: 24px;
-    line-height: 26px;
-    font-weight: 400;
-    color: #000000;
-  }
+.form__wrapper-title {
+  font-family: @oswald;
+  font-size: 24px;
+  line-height: 26px;
+  font-weight: 400;
+  color: @black;
 }
