--- a/source/less/blocks/form/program-selection-text.less
+++ b/source/less/blocks/form/program-selection-text.less
@@ -1,7 +1,7 @@
 .program-selection-text {
-  font-family: "Lato", sans-serif;
+  font-family: @lato;
   font-size: 14px;
   line-height: 16px;
   font-weight: 400;
-  color: #000000;
+  color: @black;
 }
