--- a/source/less/blocks/html-academy-logo.less
+++ b/source/less/blocks/html-academy-logo.less
@@ -1,13 +1,15 @@
-.html-academy-logo {
-  &__link {
-    text-decoration: none;
-  }
+.html-academy-logo__link {
+  text-decoration: none;
+}
 
-  &__text {
-    font-family: "Lato", sans-serif;
-    font-size: 16px;
-    line-height: 19.2px;
-    font-weight: 400;
-    color: #444444;
-  }
+.html-academy-logo__text {
+  font-family: @lato;
+  font-size: 16px;
+  line-height: 19.2px;
+  font-weight: 400;
+  color: @dark-grey;
+}
+
+.html-academy-logo__icon {
+  color: @dark-grey2;
 }
