--- a/source/less/blocks/index/example-card.less
+++ b/source/less/blocks/index/example-card.less
@@ -1,6 +1,6 @@
 .example-card {
   &__title {
-    font-family: "Oswald", sans-serif;
+    font-family: @oswald;
     font-size: 24px;
     line-height: 24px;
     font-weight: 400;
@@ -8,7 +8,7 @@
   }
 
   &__description {
-    font-family: "Lato", sans-serif;
+    font-family: @lato;
     font-weight: 400;
     font-size: 12px;
     line-height: 12px;
