--- a/source/less/blocks/index/example-costs.less
+++ b/source/less/blocks/index/example-costs.less
@@ -1,5 +1,5 @@
 .example-costs {
-  font-family: "Oswald", sans-serif;
+  font-family: @oswald;
   font-size: 14px;
   line-height: 20px;
   font-weight: 400;
