--- a/source/less/blocks/index/example-text.less
+++ b/source/less/blocks/index/example-text.less
@@ -1,17 +1,17 @@
 .example-text {
   &__title {
-    font-family: "Oswald", sans-serif;
+    font-family: @oswald;
     font-weight: 400;
     font-size: 36px;
     line-height: 40px;
-    color: #000000;
+    color: @black;
   }
 
   &__description {
-    font-family: "Lato", sans-serif;
+    font-family: @lato;
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
-    color: #444444;
+    color: @dark-grey;
   }
 }
