--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,32 +1,32 @@
 .programs {
   &__card {
-    background-color: #f2f2f2;
+    background-color: @basic-grey;
   }
 
   &__card-title {
-    font-family: "Oswald", sans-serif;
+    font-family: @oswald;
     font-size: 24px;
     line-height: 37px;
-    color: #000000;
+    color: @black;
     text-transform: uppercase;
     font-weight: 400;
   }
 
   &__card-description {
-    font-family: "Lato", sans-serif;
+    font-family: @lato;
     font-size: 14px;
     line-height: 18px;
     font-weight: 400;
-    color: #444444;
+    color: @dark-grey;
   }
 
   &__card-link {
-    font-family: "Oswald", sans-serif;
+    font-family: @oswald;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 16px;
     line-height: 16px;
-    color: #000000;
+    color: @black;
     font-weight: 400;
   }
 }
