--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,18 +1,18 @@
 .main-nav {
   margin: 0;
   padding: 0;
+}
 
-  &__item {
-    list-style-type: none;
-  }
+.main-nav__item {
+  list-style-type: none;
+}
 
-  &__link {
-    font-family: "Oswald", sans-serif;
-    font-weight: 500;
-    text-decoration: none;
-    color: #000000;
-    text-transform: uppercase;
-    font-size: 20px;
-    line-height: 20px;
-  }
+.main-nav__link {
+  font-family: @oswald;
+  font-weight: 500;
+  text-decoration: none;
+  color: @black;
+  text-transform: uppercase;
+  font-size: 20px;
+  line-height: 20px;
 }
