--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -3,6 +3,11 @@
   background-repeat: repeat-x;
 }
 
+.hero__wrapper {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .hero__title {
   font-family: @oswald;
   font-size: 36px;
@@ -18,7 +23,6 @@
   font-weight: 400;
   text-transform: uppercase;
   color: @white;
-  background-color: @green;
 }
 
 .hero__button {
