--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,32 +1,35 @@
 .programs {
-  &__card {
-    background-color: @basic-grey;
-  }
+  width: 320px;
+  margin: 0 auto;
+}
 
-  &__card-title {
-    font-family: @oswald;
-    font-size: 24px;
-    line-height: 37px;
-    color: @black;
-    text-transform: uppercase;
-    font-weight: 400;
-  }
+.programs__card {
+  background-color: @basic-grey;
+}
 
-  &__card-description {
-    font-family: @lato;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 400;
-    color: @dark-grey;
-  }
+.programs__card-title {
+  font-family: @oswald;
+  font-size: 24px;
+  line-height: 37px;
+  color: @black;
+  text-transform: uppercase;
+  font-weight: 400;
+}
 
-  &__card-link {
-    font-family: @oswald;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 16px;
-    color: @black;
-    font-weight: 400;
-  }
+.programs__card-description {
+  font-family: @lato;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @dark-grey;
+}
+
+.programs__card-link {
+  font-family: @oswald;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 16px;
+  color: @black;
+  font-weight: 400;
 }
