--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -3,6 +3,13 @@
   padding: 0;
 }
 
+.main-nav__toggle {
+  background-color: @white;
+  border: none;
+  margin-top: 24px;
+  margin-right: 20px;
+}
+
 .main-nav__item {
   list-style-type: none;
 }
