--- a/source/less/blocks/catalog/additional-goods.less
+++ b/source/less/blocks/catalog/additional-goods.less
@@ -1,3 +1,8 @@
+.additional-goods {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .additional-goods__title {
   font-family: @oswald;
   font-size: 24px;
