--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,3 +1,10 @@
+.contacts {
+
+  &--grey {
+    background-color: @basic-grey;
+  }
+}
+
 .contacts__title {
   font-family: @oswald;
   font-size: 16px;
@@ -11,4 +18,9 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
+}
+
+.contacts__wrapper {
+  width: 320px;
+  margin: 0 auto;
 }
