--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -2,6 +2,11 @@
   background-color: @basic-grey;
 }
 
+.footer__wrapper {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .footer__social-icon {
   color: @dark-grey2;
 }
