--- a/source/less/blocks/index/advantages.less
+++ b/source/less/blocks/index/advantages.less
@@ -1,20 +1,23 @@
 .advantages {
-  &__title {
-    font-family: @oswald;
-    font-size: 36px;
-    line-height: 40px;
-    font-weight: 400;
-  }
+  width: 320px;
+  margin: 0 auto;
+}
 
-  &__list {
-    list-style-type: none;
-  }
+.advantages__title {
+  font-family: @oswald;
+  font-size: 36px;
+  line-height: 40px;
+  font-weight: 400;
+}
 
-  &__list-text {
-    font-family: @lato;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 400;
-    color: @dark-grey;
-  }
+.advantages__list {
+  list-style-type: none;
+}
+
+.advantages__list-text {
+  font-family: @lato;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @dark-grey;
 }
