--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,4 +1,18 @@
+.main-header {
+  display: flex;
+  width: 320px;
+  margin: 0 auto;
+  min-height: 65px;
+}
+
 .main-header__logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   margin-left: 20px;
-  margin-top: 10px;
+  margin-top: 3px;
+}
+
+.main-header__logo-image {
+  margin-right: 56.66px;
 }
