--- a/source/less/blocks/variables.less
+++ b/source/less/blocks/variables.less
@@ -1,17 +1,25 @@
+//fonts
 @lato: "Lato", Arial, sans-serif;
 @oswald: "Oswald", Verdana, sans-serif;
+//colors
 @black: #000000;
 @white: #ffffff;
 @green: #68b738;
 @dark-green: #5eaa2f;
 @basic-grey: #f2f2f2;
 @basic-grey2: #ebebeb;
+@light-grey: #e6e6e6;
 @grey: #cdcdcd;
 @dark-grey: #444444;
 @dark-grey2: #666666;
 @dark-grey3: #222222;
 @color-error: #ff8282;
 @shadow-color: #c4c4c4;
+//shadows
 @shadow-normal: 0px 1px 3px rgba(0, 0, 0, 0.16);
 @shadow-hover: 0px 2px 4px rgba(0, 0, 0, 0.19);
 @shadow-active: 0px 3px 5px rgba(0, 0, 0, 0.2);
+//viewports
+@tablet-width: 768px;
+@desktop-width: 1200px;
+@mobile-width: 767px;
