--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,6 +6,7 @@
 @import "./blocks/index/hero.less";
 @import "./blocks/button.less";
 @import "./blocks/index/programs.less";
+@import "./blocks/index/promo.less";
 @import "./blocks/index/advantages.less";
 @import "./blocks/index/example.less";
 @import "./blocks/index/example-text.less";
@@ -21,6 +22,7 @@
 @import "./blocks/form/form.less";
 @import "./blocks/form/program-selection-button.less";
 @import "./blocks/form/program-selection-text.less";
+@import "./blocks/catalog/catalog.less";
 @import "./blocks/catalog/catalog-title.less";
 @import "./blocks/catalog/product.less";
 @import "./blocks/catalog/catalog-list.less";
@@ -32,3 +34,4 @@
 @import "./blocks/catalog/gift.less";
 @import "./blocks/variables.less";
 @import "./blocks/social-list.less";
+@import "./blocks/main-container.less";
