--- a/source/less/blocks/index/example-text.less
+++ b/source/less/blocks/index/example-text.less
@@ -1,17 +1,23 @@
 .example-text {
-  &__title {
-    font-family: @oswald;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 40px;
-    color: @black;
-  }
+  padding-top: 25px;
+}
 
-  &__description {
-    font-family: @lato;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    color: @dark-grey;
-  }
+.example-text__title {
+  font-family: @oswald;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 40px;
+  color: @black;
+  margin: 0;
+  margin-bottom: 40px;
+}
+
+.example-text__description {
+  font-family: @lato;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: @dark-grey;
+  margin: 0;
+  margin-bottom: 20px;
 }
