--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,6 +11,8 @@
 @import "./blocks/index/example.less";
 @import "./blocks/index/example-text.less";
 @import "./blocks/index/example-card.less";
+@import "./blocks/index/example-cards.less";
+@import "./blocks/index/cat-slider.less";
 @import "./blocks/index/example-costs.less";
 @import "./blocks/contacts.less";
 @import "./blocks/footer.less";
