--- a/source/less/blocks/html-academy-logo.less
+++ b/source/less/blocks/html-academy-logo.less
@@ -1,3 +1,10 @@
+.html-academy-logo {
+  min-height: 78px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .html-academy-logo__link {
   text-decoration: none;
 }
