--- a/source/less/blocks/index/example-costs.less
+++ b/source/less/blocks/index/example-costs.less
@@ -1,7 +1,13 @@
 .example-costs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: @oswald;
   font-size: 14px;
   line-height: 20px;
   font-weight: 400;
   text-transform: uppercase;
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
