--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -1,9 +1,13 @@
 .hero {
   background-image: url("../img/promo-filter-image.png");
   background-repeat: repeat-x;
+  min-height: 480px;
 }
 
 .hero__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 320px;
   margin: 0 auto;
 }
@@ -14,6 +18,10 @@
   line-height: 36px;
   font-weight: 400;
   color: @white;
+  text-align: center;
+  margin: 0;
+  margin-top: 27px;
+  margin-bottom: 25px;
 }
 
 .hero__description {
@@ -23,9 +31,20 @@
   font-weight: 400;
   text-transform: uppercase;
   color: @white;
+  margin: 0;
+  margin-bottom: 29px;
 }
 
 .hero__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: @white;
   background-color: @green;
+  min-width: 280px;
+  min-height: 44px;
+}
+
+.hero__image {
+  margin-bottom: 3px;
 }
