--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -1,5 +1,13 @@
 .social-list {
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  gap: 15px;
+  min-height: 62px;
+  border-bottom: 1px solid #d9d9d9;
 }
 
 .social-list__item {
