--- a/source/less/blocks/catalog/catalog-title.less
+++ b/source/less/blocks/catalog/catalog-title.less
@@ -4,4 +4,8 @@
   line-height: 36px;
   font-weight: 400;
   color: @black;
+  min-height: 76px;
+  border-top: 1px solid @light-grey;
+  margin: 0;
+  padding-top: 27px;
 }
