--- a/source/less/blocks/catalog/product-button.less
+++ b/source/less/blocks/catalog/product-button.less
@@ -1,6 +1,10 @@
 .product-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: @white;
   background-color: @green;
   font-size: 16px;
   line-height: 20px;
+  min-height: 40px;
 }
