--- a/source/less/blocks/catalog/product-text.less
+++ b/source/less/blocks/catalog/product-text.less
@@ -1,3 +1,9 @@
+.product-text {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .product-text__item {
   font-family: @lato;
   font-size: 12px;
