--- a/source/less/blocks/catalog/catalog-title.less
+++ b/source/less/blocks/catalog/catalog-title.less
@@ -5,7 +5,7 @@
   font-weight: 400;
   color: @black;
   min-height: 76px;
-  border-top: 1px solid @light-grey;
   margin: 0;
   padding-top: 27px;
+  border-bottom: 1px solid @basic-grey2;
 }
