--- a/source/less/blocks/catalog/product.less
+++ b/source/less/blocks/catalog/product.less
@@ -1,12 +1,13 @@
 .product {
   display: flex;
   flex-direction: column;
-  min-height: 208px;
+  min-height: 170px;
+  border-bottom: 1px solid @basic-grey2;
+  margin-top: 19px;
+  margin-bottom: 25px;
 }
 
 .product__details {
-  width: 140px;
-  min-height: 103px;
   padding-bottom: 9px;
 }
 
