--- a/source/less/blocks/catalog/gift.less
+++ b/source/less/blocks/catalog/gift.less
@@ -1,7 +1,19 @@
 .gift {
-  background-color: rgba(104, 183, 56, 0.85);
   width: 320px;
   margin: 0 auto;
+  margin-top: 35px;
+  margin-bottom: 35px;
+}
+
+.gift__wrapper {
+  background-color: rgba(104, 183, 56, 0.85);
+  width: 280px;
+  min-height: 290px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .gift__text {
@@ -10,4 +22,5 @@
   line-height: 20px;
   font-weight: 400;
   color: @white;
+  text-align: center;
 }
