--- a/source/less/blocks/catalog/product-last.less
+++ b/source/less/blocks/catalog/product-last.less
@@ -6,3 +6,9 @@
   color: #111111;
   text-transform: uppercase;
 }
+
+.product-last__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
