--- a/source/less/blocks/form/form-list.less
+++ b/source/less/blocks/form/form-list.less
@@ -4,6 +4,19 @@
   line-height: 18px;
   font-weight: 400;
   text-transform: uppercase;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.form-list__item-input {
+  min-height: 45px;
+  margin-bottom: 14px;
+  border: 1px solid #e7e7e7;
+}
+
+.form-list__item-radio {
+  margin-bottom: 25px;
 }
 
 .form-list__item-label,
@@ -19,8 +32,8 @@
   color: @black;
 }
 
-.form-list__item-input {
-  border: 1px solid #e7e7e7;
+.form-list__item-checkbox {
+  margin-bottom: 13px;
 }
 
 .form-list__item-input--dark {
