--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -3,10 +3,30 @@
   margin: 0 auto;
 }
 
+.form__wrapper {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 24px;
+
+  &:nth-child(1),
+  &:nth-child(2) {
+    border-bottom: 1px solid #d9d9d9;
+  }
+}
+
 .form__wrapper-title {
   font-family: @oswald;
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
   color: @black;
+  margin-bottom: 35px;
+}
+
+.form__input-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
 }
