--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,6 +22,7 @@
 @import "./blocks/form/form-list.less";
 @import "./blocks/form/form-textarea.less";
 @import "./blocks/form/form.less";
+@import "./blocks/form/form-container.less";
 @import "./blocks/form/program-selection-button.less";
 @import "./blocks/form/program-selection-text.less";
 @import "./blocks/catalog/catalog.less";
