--- a/source/less/blocks/html-academy-logo.less
+++ b/source/less/blocks/html-academy-logo.less
@@ -3,6 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    gap: 26px;
+  }
 }
 
 .html-academy-logo__link {
