--- a/source/less/blocks/index/promo.less
+++ b/source/less/blocks/index/promo.less
@@ -1,4 +1,10 @@
 .promo {
   margin: 0, auto;
   margin-bottom: 29px;
+
+  @media (min-width: @tablet-width) {
+    border-bottom: 1px solid #e6e6e6;
+    margin: 0, auto;
+    margin-bottom: 0;
+  }
 }
