--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,9 +1,14 @@
 .contacts {
   display: flex;
-  min-height: 112px;
+  flex-direction: column;
+  align-items: center;
 
   &--grey {
     background-color: @basic-grey;
+  }
+
+  @media (min-width: @tablet-width) {
+    min-height: 199px;
   }
 }
 
@@ -15,10 +20,20 @@
   font-weight: 400;
   margin: 0;
   width: 139px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 26px;
+    width: 450px;
+    margin-left: 70px;
+  }
 }
 
 .contacts__description {
   width: 139px;
+  @media (min-width: @tablet-width) {
+    width: 310px;
+  }
 }
 
 .contacts__description-text {
@@ -27,6 +42,14 @@
   font-weight: 400;
   line-height: 20px;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    display: flex;
+    flex-direction: row-reverse;
+    text-align: right;
+    margin-right: 70px;
+  }
 }
 
 .contacts__wrapper {
@@ -34,4 +57,11 @@
   align-items: center;
   width: 280px;
   margin: 0 auto;
+  min-height: 112px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+    justify-content: space-between;
+    min-height: 199px;
+  }
 }
