--- a/source/less/blocks/index/example-cards.less
+++ b/source/less/blocks/index/example-cards.less
@@ -2,4 +2,8 @@
   margin: 0;
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    width: 260px;
+  }
 }
