--- a/source/less/blocks/index/example-costs.less
+++ b/source/less/blocks/index/example-costs.less
@@ -10,4 +10,11 @@
   margin: 0;
   margin-top: 20px;
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 174px;
+    font-size: 20px;
+    text-align: end;
+    margin-top: 0;
+  }
 }
