--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -1,8 +1,20 @@
 .example {
   background-color: #eaeaea;
+
+  @media (min-width: @tablet-width) {
+    background-color: @white;
+  }
 }
 
 .example__wrapper {
   width: 280px;
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    margin: 0, auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
