--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -12,6 +12,10 @@
   background-color: @basic-grey;
   margin-top: 20px;
   padding-top: 30px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
 }
 
 .programs__card-title {
@@ -29,6 +33,10 @@
     background-color: @green;
     border-radius: 50%;
     background-position: center;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
   }
 
   &--mass::before {
@@ -36,6 +44,10 @@
     background-color: @green;
     border-radius: 50%;
     background-position: center;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
   }
 }
 
@@ -50,6 +62,32 @@
   margin-top: 29px;
   padding-bottom: 23px;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+    width: 340px;
+    position: relative;
+
+    &--slim::after {
+      content: url("../img/tablet/program-slim-icon.svg");
+      background-color: @green;
+      border-radius: 50%;
+      background-position: center;
+      position: absolute;
+      bottom: -31px;
+      left: 430px;
+    }
+
+    &--mass::before {
+      content: url("../img/tablet/program-mass-icon.svg");
+      background-color: @green;
+      border-radius: 50%;
+      background-position: center;
+      position: absolute;
+      bottom: -10px;
+      left: 375px;
+    }
+  }
 }
 
 .programs__card-link {
