--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -16,6 +16,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
 }
 
 .main-nav__item {
@@ -30,6 +34,10 @@
   &:first-child {
     border-top: 1px solid @light-grey;
   }
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
 }
 
 .main-nav__link {
@@ -40,4 +48,10 @@
   text-transform: uppercase;
   font-size: 20px;
   line-height: 20px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+  }
 }
