--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -8,8 +8,16 @@
   gap: 15px;
   min-height: 62px;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
 }
 
 .social-list__item {
   color: @dark-grey2;
+
+  @media (min-width: @tablet-width) {
+    gap: 26px;
+  }
 }
