--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,7 @@
 @import "./blocks/visually-hidden.less";
 @import "./blocks/index/hero.less";
 @import "./blocks/button.less";
+@import "./blocks/map.less";
 @import "./blocks/index/programs.less";
 @import "./blocks/index/promo.less";
 @import "./blocks/index/advantages.less";
@@ -12,6 +13,7 @@
 @import "./blocks/index/example-text.less";
 @import "./blocks/index/example-card.less";
 @import "./blocks/index/example-cards.less";
+@import "./blocks/index/example-cards-wrapper.less";
 @import "./blocks/index/cat-slider.less";
 @import "./blocks/index/example-costs.less";
 @import "./blocks/contacts.less";
