--- a/source/less/blocks/catalog/additional-goods.less
+++ b/source/less/blocks/catalog/additional-goods.less
@@ -1,11 +1,19 @@
 .additional-goods {
   width: 320px;
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
 }
 
 .additional-goods__wrapper {
   width: 280px;
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
 }
 
 .additional-goods__title {
@@ -17,6 +25,16 @@
   border-bottom: 1px solid @basic-grey2;
   padding-bottom: 36px;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    padding: 0;
+    margin-top: 68px;
+    margin-bottom: 80px;
+    border: none;
+    margin-left: 39px;
+  }
 }
 
 .additional-goods__list {
@@ -27,17 +45,43 @@
 
 .additional-goods__list-item {
   border-bottom: 1px solid @basic-grey2;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 140px;
+    border: 1px solid @grey;
+
+    &:not(:last-child) {
+      border-bottom: none;
+    }
+  }
 }
 
 .additional-goods__list-item-wrapper {
   display: flex;
   flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 632px;
+  }
 }
 
 .additional-goods__list-item-text-wrapper {
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
+
+  @media (min-width: @tablet-width) {
+    justify-content: flex-end;
+    width: 223px;
+    gap: 50px;
+  }
 }
 
 .additional-goods__list-item-title {
@@ -50,6 +94,11 @@
   margin: 0;
   margin-top: 13px;
   margin-bottom: 13px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .additional-goods__list-item-text {
@@ -58,6 +107,11 @@
   line-height: 14px;
   font-weight: 400;
   color: @dark-grey;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .additional-goods__button {
@@ -69,4 +123,9 @@
   width: 280px;
   min-height: 40px;
   margin-bottom: 19px;
+
+  @media (min-width: @tablet-width) {
+    width: 632px;
+    min-height: 39px;
+  }
 }
