--- a/source/less/blocks/catalog/catalog-list.less
+++ b/source/less/blocks/catalog/catalog-list.less
@@ -2,4 +2,10 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-column-gap: 30px;
+  }
 }
