--- a/source/less/blocks/catalog/gift.less
+++ b/source/less/blocks/catalog/gift.less
@@ -3,6 +3,11 @@
   margin: 0 auto;
   margin-top: 35px;
   margin-bottom: 35px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+    min-height: 200px;
+  }
 }
 
 .gift__wrapper {
@@ -14,6 +19,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+    min-height: 200px;
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .gift__text {
@@ -23,4 +35,8 @@
   font-weight: 400;
   color: @white;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    text-align: end;
+  }
 }
