--- a/source/less/blocks/catalog/product-button.less
+++ b/source/less/blocks/catalog/product-button.less
@@ -8,4 +8,10 @@
   line-height: 20px;
   min-height: 40px;
   margin-top: 10px;
+
+  @media (min-width: @tablet-width) {
+    width: 248px;
+    min-height: 40px;
+    margin-bottom: 39px;
+  }
 }
