--- a/source/less/blocks/catalog/product-last.less
+++ b/source/less/blocks/catalog/product-last.less
@@ -5,6 +5,14 @@
   font-weight: 400;
   color: #111111;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 161px;
+    font-size: 20px;
+    line-height: 22px;
+    width: 150px;
+    text-align: center;
+  }
 }
 
 .product-last__wrapper {
