--- a/source/less/blocks/catalog/product-text.less
+++ b/source/less/blocks/catalog/product-text.less
@@ -2,6 +2,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 7px;
+    padding-bottom: 9px;
+    border-bottom: 1px solid #cdcdcd;
+
+    &--last {
+      border: none;
+      width: 200px;
+      text-align: center;
+      margin-bottom: 63px;
+    }
+  }
 }
 
 .product-text__item {
@@ -10,4 +23,8 @@
   line-height: 16px;
   font-weight: 400;
   color: @dark-grey;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+  }
 }
