--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -9,6 +9,7 @@
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: space-between;
+    width: 708px;
   }
 }
 
@@ -18,6 +19,10 @@
   align-items: center;
   width: 280px;
   min-height: 65px;
+
+  @media (min-width: @tablet-width) {
+    width: 174px;
+  }
 }
 
 .main-header__logo-link {
@@ -27,6 +32,10 @@
 
 .main-header__logo-image {
   margin-right: 56.66px;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 12px;
+  }
 }
 
 .main-header__logo-button {
