адаптивные сетки планшетной версии

--- a/source/less/blocks/catalog/product.less
+++ b/source/less/blocks/catalog/product.less
@@ -25,49 +25,49 @@
     }
 
     &:nth-child(1)::before {
-      content: url(../img/tablet/catalog/chiken500.png);
+      content: url("../img/tablet/catalog/chiken500.png");
       position: absolute;
       top: -44px;
     }
 
     &:nth-child(2)::before {
-      content: url(../img/tablet/catalog/chiken1000.png);
+      content: url("../img/tablet/catalog/chiken1000.png");
       position: absolute;
       top: -72px;
     }
 
     &:nth-child(3)::before {
-      content: url(../img/tablet/catalog/fish500.png);
+      content: url("../img/tablet/catalog/fish500.png");
       position: absolute;
       top: -44px;
     }
 
     &:nth-child(4)::before {
-      content: url(../img/tablet/catalog/fish1000.png);
+      content: url("../img/tablet/catalog/fish1000.png");
       position: absolute;
       top: -72px;
     }
 
     &:nth-child(5)::before {
-      content: url(../img/tablet/catalog/buckwheat500.png);
+      content: url("../img/tablet/catalog/buckwheat500.png");
       position: absolute;
       top: -44px;
     }
 
     &:nth-child(6)::before {
-      content: url(../img/tablet/catalog/buckwheat1000.png);
+      content: url("../img/tablet/catalog/buckwheat1000.png");
       position: absolute;
       top: -72px;
     }
 
     &:nth-child(7)::before {
-      content: url(../img/tablet/catalog/rice500.png);
+      content: url("../img/tablet/catalog/rice500.png");
       position: absolute;
       top: -44px;
     }
 
     &:nth-child(8)::before {
-      content: url(../img/tablet/catalog/plus-icon.svg);
+      content: url("../img/tablet/catalog/plus-icon.svg");
       position: absolute;
       top: 50px;
     }
