--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -2,9 +2,10 @@
   background-image: url("../img/promo-filter-image.png");
   background-repeat: repeat-x;
   min-height: 480px;
+  margin: 0, auto;
 
   @media (min-width: @tablet-width) {
-    background-image: url(../img/tablet/hero-background.png);
+    background-image: url("../img/tablet/hero-background.png");
     background-position: bottom;
     background-repeat: no-repeat;
     min-height: 868px;
@@ -21,7 +22,6 @@
   @media (min-width: @tablet-width) {
     width: 708px;
     align-items: flex-start;
-    margin-left: 88px;
   }
 }
 
