--- a/source/less/blocks/form/form-textarea.less
+++ b/source/less/blocks/form/form-textarea.less
@@ -11,4 +11,11 @@
   padding-top: 10px;
   padding-left: 15px;
   padding-right: 12px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    width: 604px;
+    min-height: 174px;
+  }
 }
