--- a/source/less/blocks/form/form-title-description.less
+++ b/source/less/blocks/form/form-title-description.less
@@ -8,4 +8,12 @@
   width: 320px;
   margin: 0 auto;
   margin-bottom: 39px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+    margin-top: 54px;
+    margin-bottom: 56px;
+  }
 }
