--- a/source/less/blocks/form/form-title.less
+++ b/source/less/blocks/form/form-title.less
@@ -8,4 +8,13 @@
   margin: 0 auto;
   margin-top: 27px;
   margin-bottom: 37px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    width: 433px;
+    min-height: 60px;
+    margin: 0;
+    margin-top: 30px;
+  }
 }
