--- a/source/less/blocks/form/program-selection-button.less
+++ b/source/less/blocks/form/program-selection-button.less
@@ -5,4 +5,10 @@
   width: 280px;
   min-height: 40px;
   margin-bottom: 21px;
+
+  @media (min-width: @tablet-width) {
+    width: 282px;
+    min-height: 52px;
+    font-size: 20px;
+  }
 }
