--- a/source/less/blocks/form/program-selection-text.less
+++ b/source/less/blocks/form/program-selection-text.less
@@ -5,4 +5,8 @@
   font-weight: 400;
   color: @black;
   margin-bottom: 32px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+  }
 }
