--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -5,6 +5,10 @@
   @media (min-width: @tablet-width) {
     min-height: 147px;
   }
+
+  @media (min-width: @desktop-width) {
+    min-height: 169px;
+  }
 }
 
 .footer__wrapper {
@@ -19,6 +23,10 @@
     justify-content: space-between;
     padding-top: 56px;
     padding-bottom: 56px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
   }
 }
 
