--- a/source/less/blocks/index/advantages.less
+++ b/source/less/blocks/index/advantages.less
@@ -4,8 +4,13 @@
   width: 280px;
   margin: 0 auto;
   margin-bottom: 29px;
+
   @media (min-width: @tablet-width) {
     width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
   }
 }
 
@@ -23,6 +28,10 @@
     line-height: 60px;
     margin-bottom: 72px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 71px;
+  }
 }
 
 .advantages__list {
@@ -34,6 +43,12 @@
     min-height: 670px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    min-height: 280px;
   }
 }
 
