--- a/source/less/blocks/index/cat-slider.less
+++ b/source/less/blocks/index/cat-slider.less
@@ -5,4 +5,8 @@
     background-color: #eaeaea;
     width: 100%;
   }
+
+  @media (min-width: @desktop-width) {
+    background-color: @basic-grey;
+  }
 }
