--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -11,6 +11,16 @@
     justify-content: space-between;
     width: 708px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 50px;
+    background-image: url("../img/desktop/index-background.png");
+    background-repeat: no-repeat;
+    background-position: right;
+  }
 }
 
 .main-header__logo {
