--- a/source/less/blocks/index/example-cards-wrapper.less
+++ b/source/less/blocks/index/example-cards-wrapper.less
@@ -4,5 +4,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 436px;
   }
 }
