--- a/source/less/blocks/index/example-cards.less
+++ b/source/less/blocks/index/example-cards.less
@@ -6,4 +6,8 @@
   @media (min-width: @tablet-width) {
     width: 260px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 35px;
+  }
 }
