--- a/source/less/blocks/index/example-costs.less
+++ b/source/less/blocks/index/example-costs.less
@@ -1,4 +1,23 @@
 .example-costs {
+  margin: 0 auto;
+  width: 188px;
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    margin: 0;
+    justify-content: flex-start;
+    width: 100%;
+  }
+}
+
+.example-costs__text {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,5 +35,12 @@
     font-size: 20px;
     text-align: end;
     margin-top: 0;
+    margin-bottom: 9px;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  @media (min-width: @desktop-width) {
+    justify-content: center;
   }
 }
