--- a/source/less/blocks/index/example-title.less
+++ b/source/less/blocks/index/example-title.less
@@ -1,5 +1,7 @@
-.example-text {
+.example-title {
   padding-top: 25px;
+  width: 280px;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     padding: 0;
@@ -7,9 +9,13 @@
     margin-top: 43px;
     margin-bottom: 69px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+  }
 }
 
-.example-text__title {
+.example-title__text {
   font-family: @oswald;
   font-weight: 400;
   font-size: 36px;
@@ -22,20 +28,5 @@
     font-size: 60px;
     line-height: 60px;
     margin-bottom: 63px;
-  }
-}
-
-.example-text__description {
-  font-family: @lato;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
-  color: @dark-grey;
-  margin: 0;
-  margin-bottom: 20px;
-
-  @media (min-width: @tablet-width) {
-    font-size: 16px;
-    line-height: 24px;
   }
 }
