--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -17,4 +17,57 @@
     flex-direction: column;
     align-items: center;
   }
+
+  @media (min-width: @desktop-width) {
+    background-color: @basic-grey;
+    padding-top: 70px;
+  }
+}
+
+.example__wrapper-desktop {
+  width: 100%;
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    width: 1220px;
+  }
+}
+
+.example__wrapper-description {
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 436px;
+    min-height: 317px;
+  }
+}
+
+.example__wrapper-description-text {
+  font-family: @lato;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: @dark-grey;
+  margin: 0;
+  margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    display: block;
+    padding: 0;
+    margin-bottom: 69px;
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 436px;
+    min-height: 96px;
+  }
 }
