--- a/source/less/blocks/index/promo.less
+++ b/source/less/blocks/index/promo.less
@@ -6,4 +6,8 @@
     border-bottom: 1px solid #e6e6e6;
     margin-bottom: 0;
   }
+
+  @media (min-width: @desktop-width) {
+    border-bottom: none;
+  }
 }
