--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -12,6 +12,11 @@
     width: 510px;
     min-height: 34px;
   }
+
+  @media (min-width: @desktop-width) {
+    background-color: transparent;
+    width: 620px;
+  }
 }
 
 .main-nav__list {
@@ -69,6 +74,16 @@
     &--current {
       padding-top: 2px;
       border-bottom: 2px solid @green;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    color: @white;
+    font-size: 20px;
+    line-height: 30px;
+
+    &--current {
+      border-bottom: 2px solid @white;
     }
   }
 }
