--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,13 +1,20 @@
 .map {
   height: 362px;
   width: 320px;
-  background-image: url(../img/mobile/map.png);
+  background-image: url("../img/mobile/map.png");
   background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
     width: 768px;
     height: 400px;
-    background-image: url(../img/tablet/map.png);
+    background-image: url("../img/tablet/map.png");
+    background-repeat: no-repeat;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1440px;
+    height: 400px;
+    background-image: url("../img/desktop/map.png");
     background-repeat: no-repeat;
   }
 }
